destination-rule-1.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: checkout-destination
spec:
  host: checkout
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
