envoy-filter.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: retry-backoff-filter
  namespace: default
spec:
  configPatches:
    - applyTo: HTTP_ROUTE
      match:
        context: SIDECAR_OUTBOUND
      patch:
        operation: MERGE
        value:
          route:
            retry_policy:
              retry_back_off:
                base_interval: 0.5s
                max_interval: 5s
